src/test/ARM/valid/arm/decl_assign_int.deca
// Description:
//    test d'initialisation et affectation d'entiers 
//   
// Résultats:
//    23
//    2
//    3
//
// Historique:
//    cree le 24/01/2022

{
    int a = 23;
    int b = 2;
    int c;

    c = 3;
    println(a);
    println(b);
    println(c);
}