src/test/ARM/invalid/arm/max_decl.deca
// Description:
//    test de déclaration d'entier ne portant pas sur 32 bits
//   
// Résultats:
//    Internal compiler error while compiling file
//
// Historique:
//    cree le 24/01/2022

{
    int m = 2147483648;    //2*31

    println(m);
}